@@ -24,6 +24,8 @@ from CVSParser import CVSParser
 from SVNParser import SVNParser
 from GitParser import GitParser
 
+from utils import printerr
+
 def create_parser_from_logfile (uri):
     def logfile_is_cvs (logfile):
         retval = False
@@ -31,7 +33,7 @@ def create_parser_from_logfile (uri):
         try:
             f = open (logfile, 'r')
         except IOError, e:
-            print e
+            printerr (str (e))
             return False
         
         patt = re.compile ("^RCS file:(.*)$")
@@ -53,7 +55,7 @@ def create_parser_from_logfile (uri):
         try:
             f = open (logfile, 'r')
         except IOError, e:
-            print e
+            printerr (str (e))
             return False
 
         patt = re.compile ("^r(.*) \| (.*) \| (.*) \| (.*)$")
@@ -75,7 +77,7 @@ def create_parser_from_logfile (uri):
         try:
             f = open (logfile, 'r')
         except IOError, e:
-            print e
+            printerr (str (e))
             return False
 
         patt = re.compile ("^commit (.*)$")
@@ -105,7 +107,7 @@ def create_parser_from_logfile (uri):
 
         return p
 
-    print "Error: path %s doesn't look like a valid log file" % (uri)
+    printerr ("Error: path %s doesn't look like a valid log file" % (uri))
     return None
 
 def create_parser_from_repository (repo):
@@ -116,7 +118,7 @@ def create_parser_from_repository (repo):
     elif repo.get_type () == 'git':
         p = GitParser ()
     else:
-        print "Error: Unsupported repository type: %s" % (repo.get_type ())
+        printerr ("Error: Unsupported repository type: %s" % (repo.get_type ()))
         return None
 
     p.set_repository (repo)
